<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">
    
    <Button
        android:id="@+id/btn_print_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"          
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" 
        android:enabled="true"
        android:text="@string/text_print_demo" />
    
    <Button
        android:id="@+id/btn_print_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"            
        android:layout_marginLeft="@dimen/activity_vertical_margin" 
        android:enabled="true"
        android:text="@string/text_print_barcode" />
    
    <Button
        android:id="@+id/btn_print_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin" 
        android:enabled="true"
        android:text="@string/text_print_image" />
    
    <Button
        android:id="@+id/btn_print_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"   
        android:layout_marginLeft="@dimen/activity_vertical_margin" 
        android:enabled="true"
        android:text="@string/text_print_receipt" />
    
    <Button
        android:id="@+id/btn_print_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"   
        android:layout_marginLeft="@dimen/activity_vertical_margin" 
        android:enabled="true"
        android:text="@string/text_print_text" />
    
</LinearLayout>